# laholio

./: .env.dist  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  tox.ini
docker/development/: Dockerfile  docker-compose.yml  wait-for-elastic.sh  wait_for_elastic.py
docs/source/: conf.py
laholio/: __init__.py  analyzers.py  connection.py  crud.py  exceptions.py  schemas.py  settings.py
laholio/utils/: _elasticsearch.py  _fields.py  async_dsl.py  ensure_index_exists.py
tests/unit/: __init__.py  conftest.py  test_000_meta.py  test_autocomplete_searcher.py  test_compaginador.py  test_crud.py  test_crud_test_sku_search_list_all.tsv  test_filter_by_provider.py  test_meta_field_and_mapping_strict.py  test_performance_bulk_insert_method.py
