[tool.black]
  line-length = 79
  target-version = ['py36']
  quiet = true

[tool.poetry]
name = "laholio"
version = "1.1.0"
description = ""
authors = ["andres.sandoval <andres.sandoval@iconstruye.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.10.3"
autologging = "^1.3.2"
logzero = "^1.5.0"
tzlocal = "1.5.1"
tqdm = "^4.35.0"
pydantic = "^0.32.2"
petri = "^0.24.1"
elasticsearch-async = "^6.2.0"
elasticsearch-dsl = "6.4.0"
certifi = "^2019.11.28"

[tool.poetry.dev-dependencies]
pylint = "^2.3.1"
black = "^19.3b0"
bandit = "^1.6.2"
flake8 = "^3.7.8"
mypy = "^0.720"
autopep8 = "^1.4.4"
docformatter = "^1.3"
ipython = "^7.8.0"
pytest = "^5.1.3"
pytest-asyncio = "^0.10.0"
sphinx = "^2.2.0"
"sphinxcontrib.apidoc" = "^0.3.0"
sphinx_autodoc_typehints = "^1.10.3"
sphinx-paramlinks = "^0.3.7"
pytest-cov = "^2.8.1"

[[tool.poetry.source]]
name = "ICPyPI"
url = "https://iccorpiconstruye.pkgs.visualstudio.com/_packaging/ICPyPI/pypi/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
